--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "enquirer": "^2.3.6",
-    "ora": "^5.0.0"
+    "ora": "^5.0.0",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/commander": "^2.12.2",
     "@types/ejs": "^3.1.2",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.1",
